# iPurity

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  configure
.github/workflows/: PULL_REQUEST_TEMPLATE.md  c-cpp.yml  release.yml
include/: INsfwScanner.h  afc_client_pool.h  afc_helpers.h  nsfw_detector.h  safe_queue.h  scanner.h
src/: afc_client_pool.cpp  afc_helpers.cpp  afc_scanner.cpp  main.cpp  nsfw_detector.cpp  scanner.cpp
